fixed nav items alignment according to home page

--- a/about.css
+++ b/about.css
@@ -13,7 +13,7 @@ body {
 }
 .navbar li a{
     color: white !important;
-    transition: all ease-in-out 0.6s;
+    margin-right: 10px;
 }
 .navbar li a:hover{
     color: rgb(228, 218, 218) !important;
@@ -32,7 +32,6 @@ h1 {
     text-align: center;
     font-size: 3rem;
     font-family: 'Roboto', sans-serif;
-    
     -webkit-background-clip: text;
    
 }
